Prevent menu controller z-index issues

--- a/resources/stylesheets/layout/_header.scss
+++ b/resources/stylesheets/layout/_header.scss
@@ -401,7 +401,6 @@
 ///
 [for='menu-controller'] {
   position: relative;
-  z-index: my.layer('dropdown');
 
   float: right;
   margin: (my.$gutter * -0.5) 0 0 0;
@@ -412,9 +411,6 @@
     margin: my.$gutter 0 0 0;
   }
 
-  .going-to-search-results & {
-    z-index: auto;
-  }
 
   > svg {
     display: block;
@@ -424,7 +420,6 @@
   }
 
   [id='menu-controller']:checked ~ * & {
-    z-index: my.layer('modal') + 1;
 
     color: my.palette('brand', 'green', 'medium');
   }
